--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <!-- First Page -->
     <div id="welcome-page" class="animate__animated">
         <h1 id="welcome-text">Welcome</h1>
-        <div id="enter-btn">👉Click Here👈</div>
+        <img id="welcome-image" src="./images/welcome_image.png" alt="Welcome Ramzan Image" class="image">
+        <div class="sub-text">🡅<br>Click on Image</div>
     </div>
     <!-- Star Fall Animation -->
     <div class="starflakes" aria-hidden="true">
@@ -71,9 +72,10 @@
     <div id="inputs">
         <form onsubmit="(e) => loadPage(e)">
             <input type="text" name="q" id="username-input" placeholder="Enter your name here" maxlength="18" required>
-            <input type="submit" name="submit" id="generate-btn" value="Create">
-            <button name="submit" id="share-btn">Share</button>
+            <input type="submit" name="submit" id="generate-btn" value="Create"
+                class="animate__animated animate__shakeX animate__infinite animate__slow">
         </form>
+        <button name="submit" id="share-btn">Share</button>
         <audio id="audio">
             <source src="./music/music.mp3" type="audio/ogg">
             <source src="./music/music.mp3" type="audio/mpeg">
