--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <div id="welcome-page" class="animate__animated">
         <h1 id="welcome-text">Welcome</h1>
         <img id="welcome-image" src="./images/welcome_image.png" alt="Welcome Ramzan Image" class="image">
-        <div class="sub-text">🡅<br>Click on Image</div>
+        <div class="sub-text"><img src="./images/arrowup.png" alt="Arrow Up Image" class="img-sm"><br>Click on Image
+        </div>
     </div>
     <!-- Star Fall Animation -->
     <div class="starflakes" aria-hidden="true">
