--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="shortcut icon" href="/favicon.ico?" type="image/x-icon">
     <link rel="icon" href="/favicon.ico?" type="image/x-icon">
     <title>Ramzan Mubarak</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description"
+          content="Ramzan Wishes 🕌">
     <!-- Adding star fall css file -->
     <link rel="stylesheet" href="./css/starfall_animation.css">
     <!-- Adding css file -->
@@ -61,6 +64,7 @@
     </div>
     <!-- Second (Main) Page -->
     <h3 class="wish-text">🤲May Allah bless you, in this Ramzan with health, wealth, peace and happiness.🤲</h3>
+    <h3 class="wish-text">🤲   تقبلله منا ومنكم🤲 </h3>
     <div class="card">
         <img src="./images/img1.png" alt="Image" class="image">
         <div class="wrapper">
