changing to takbeer

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
         </form>
         <button name="submit" id="share-btn">Share</button>
         <audio id="audio">
-            <source src="./music/music.mp3" type="audio/ogg">
-            <source src="./music/music.mp3" type="audio/mpeg">
+            <source src="./music/takbeer_makkah.mp3" type="audio/ogg">
+            <source src="./music/takbeer_makkah.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
         </audio>
     </div>
