google console link

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
           content="Ramzan Wishes 🕌">
+    <meta name="google-site-verification" content="aplPL3tUIey266cMIw8E8PrXYTr_kBq1nFsajjcKiyU" />
     <!-- Adding star fall css file -->
     <link rel="stylesheet" href="./css/starfall_animation.css">
     <!-- Adding css file -->
