spelling mistake fix

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
     <!-- Second (Main) Page -->
     <h3 class="wish-text">🤲May Allah bless you, in this Ramzan with health, wealth, peace and happiness.🤲</h3>
-    <h3 class="wish-text">🤲   تقبلله منا ومنكم🤲 </h3>
+    <h2 class="wish-text">🤲   تقبل الله منا ومنكم🤲 </h2>
     <div class="card">
         <img src="./images/img1.png" alt="Image" class="image">
         <div class="wrapper">
